package behavioral.Iterator.Interger;

public interface Collection63 {
    Iterator63 createIterator();
}
