package behavioral.Iterator.Interger;

public interface Iterator63 {
    Object first();
    Object next();
    Object current();
    boolean isDone();
}
